--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "github-actions-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "mocha",
-    "start": "node app.js"
+    "lint": "eslint .",
+    "test": "jest --forceExit --runInBand --coverage"
   },
   "repository": {
     "type": "git",
@@ -18,11 +18,16 @@
   },
   "homepage": "https://github.com/niranaj1016/github-actions-demo#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jest": "^24.9.0",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
