--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,16 +30,10 @@ jobs:
       env:
         CI: true
         
-    -  name: docker build
-       uses: actions/docker/cli@master
-       with:
-        args: build -t k8niru/node-example .
-    -  name: docker login
-       uses: actions/docker/login@master
-       env:
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD}}
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME}}
-    -  name: docker push
-       uses: actions/docker/cli@master
-       with:
-        args: push k8niru/node-example
+    - uses: actions/checkout@master
+    - name: Publish to Registry
+      uses: elgohr/Publish-Docker-Github-Action@master
+      with:
+        name: k8niru/node-example
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
